Make sure ckeditor wrapper wraps long words so it wont grow out of bounds. [HFJ-1427]

--- a/styles/scss/application.scss
+++ b/styles/scss/application.scss
@@ -74,6 +74,7 @@ a {
     outline: none;
     min-height: 20px;
     @include border-radius(3px);
+    word-wrap: break-word;
   }
   .h5peditor-text, textarea {
     width: 100%;
